<resources>
    <string name="app_name">QRescato</string>
    <string name="dale_al_boton">Dale al boton</string>
    <string name="escanear">Escanear</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="visitante">Visitante</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="olvide_contrasena">Olvide Password</string>
    <string name="qrescato">QRescato</string>
    <string name="boton">Boton</string>
    <string name="qrastreo">QRastreo</string>
    <string name="todo">todo</string>
    <string name="title_activity_geoloca_mapa_go">Map</string>
    <string name="title_activity_maa">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="doble_clic">Doble clic</string>
    <string name="hint">hint</string>
    <string name="_123">123</string>
    <string name="usuario">usuario</string>
    <string name="contrase_a">Password</string>
    <string name="volver">Volver</string>
    <string name="atras">Atras</string>
    <string name="email">e-mail</string>
    <string name="escribe_aqui">Escribe aqui</string>
    <string name="telefono">telefono</string>
    <string name="generar_coordenadas">Generar Coordenadas</string>
    <string name="telefono_correo">telefono/correo</string>
    <string name="nombre">Nombre</string>
    <string name="aviso_coordenada">Aviso, si da a generar coordenada guardara su posicion actual</string>
    <string name="aviso_Obliga">Todo lo que tenga ( * ) es obligatorio rellenar ese campo</string>
    <string name="coordenadas">Coordenadas*</string>
    <string name="coordenada_x">Coordenada X</string>
    <string name="coordenada_y">Coordenada Y</string>
    <string name="siguiente">Siguiente</string>
    <string name="beta_v_1_02_0">BETA V.1.02.34</string>
    <string name="protectora">Protectora</string>
    <string name="voluntario">Voluntario</string>
    <string name="cambiar_password">Cambiar Password</string>
    <string name="password_nueva">Password Nueva</string>
    <string name="repite_la_password">Repite la Password</string>
    <string name="modificar">Modificar</string>
    <string name="leer_lista">Leer Lista</string>
    <string name="crear">Crear</string>
    <string name="eliminar">Eliminar</string>
    <string name="crear_protectora">Crear Protectora</string>
    <string name="telefono2">telefono*</string>
    <string name="nombre2">Nombre*</string>
    <string name="el_nombre_de_usuario_o_protectora_se_eliminara_de_la_base_de_datos_y_dejara_de_mostrarse_en_el_mapa">El nombre del Voluntario o de la Protectora, se eliminara de la base de datos, y dejara de, mostrarse en el Mapa</string>
    <string name="borrar">Borrar</string>
    <string name="logo">Logo</string>
    <string name="usuario_creado">Usuario Creado!!!</string>
    <string name="admin">Admin</string>
    <string name="que_lista_quieres_ver">Que lista quieres ver:</string>
    <string name="que_deseas_borrar">Que deseas borrar:</string>
    <string name="que_deseas_modificar">Que deseas modificar:</string>
    <string name="crear_voluntario">Crear Voluntario</string>
    <string name="modificar_voluntariio">Modificar Voluntario</string>
    <string name="modificar_protectora">Modificar Protectora</string>
    <string name="voluntarios">Voluntarios</string>
    <string name="protectoras">Protectoras</string>
    <string name="usuario_modificado">Usuario Modificado</string>
    <string name="protectora_modificada">Protectora Modificada</string>
    <string name="se_ha_eliminado_correctamente">Se ha eliminado correctamente</string>
    <string name="protectora_creada">Protectora Creada</string>
    <string name="listo">Listo</string>
    <string name="button">Button</string>
    <string name="generar_qr">Generar QR</string>
</resources>
