<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuRastreo"
    android:background="@drawable/fondo2">

    <Button
        android:id="@+id/buttonini"
        android:background="@drawable/btnoscuro2"
        style="@style/etiquetas"
        android:textSize="30sp"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="92dp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonvis"
        android:onClick="Visita"
        android:background="@drawable/btnoscuro2"
        style="@style/etiquetas"
        android:textSize="30sp"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="92dp"
        android:text="@string/visitante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonini" />

    <Button
        android:id="@+id/buttoncrearRas"
        style="@style/etiquetas"
        android:background="@drawable/btnoscuro2"
        android:textSize="25sp"
        android:layout_width="143dp"
        android:layout_height="68dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:text="@string/crear_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonini" />

    <Button
        android:id="@+id/buttonolvide"
        style="@style/etiquetas"
        android:textSize="25sp"
        android:layout_width="144dp"
        android:layout_height="64dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/btnoscuro2"
        android:text="@string/olvide_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonini" />

    <ImageView
        android:id="@+id/ajustes"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_width="398dp"
        android:layout_height="68dp"
        android:text="@string/qrastreo"
        android:textAlignment="center"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>