<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/fondo2">


    <Button
        android:id="@+id/buttonLogin3"
        style="@style/etiquetas"
        android:layout_width="127dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnoscuro2"
        android:onClick="volver"
        android:text="@string/atras"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPwd"
        app:layout_constraintVertical_bias="0.586"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textName"
        style="@style/etiquetas2"
        android:layout_width="333dp"
        android:layout_height="74dp"
        android:hint="@string/nombre"
        android:text="@string/admin"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/beta"
        android:layout_width="282dp"
        android:layout_height="21dp"
        android:textAlignment="textEnd"
        style="@style/etiquetas2"
        android:textSize="15sp"
        android:text="@string/beta_v_1_02_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/usu"
        style="@style/etiquetas2"
        android:layout_width="191dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/usuario"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pas"
        style="@style/etiquetas2"
        android:layout_width="234dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/contrase_a"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textPas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPwd"
        style="@style/etiquetas"
        android:layout_width="232dp"
        android:layout_height="84dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnoscuro2"
        android:onClick="login"
        android:text="@string/iniciar_sesion"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textPas"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:hint= "@string/_123"
        android:inputType="textPassword"
        android:text="@string/_123"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>