<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteUsers"
    android:background="@drawable/fondo2">

    <TextView
        android:id="@+id/aviso3"
        style="@style/etiquetas2"
        android:layout_width="330dp"
        android:layout_height="136dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/el_nombre_de_usuario_o_protectora_se_eliminara_de_la_base_de_datos_y_dejara_de_mostrarse_en_el_mapa"
        android:textAlignment="center"
        android:textColor="#CC0A0A"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usu5"
        style="@style/etiquetas2"
        android:layout_width="259dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/voluntario"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aviso3"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/listadoProtectora"
        style="@style/etiquetas2"
        android:layout_width="333dp"
        android:layout_height="74dp"
        android:hint="@string/nombre"
        android:text="@string/doble_clic"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usu5"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/beta"
        style="@style/etiquetas2"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:text="@string/beta_v_1_02_0"
        android:textAlignment="textEnd"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/BtnAtras"
        style="@style/etiquetas"
        android:layout_width="176dp"
        android:layout_height="69dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnoscuro2"
        android:onClick="volver"
        android:text="@string/atras"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrarProtectora"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBorrarProtectora"
        style="@style/etiquetas"
        android:layout_width="176dp"
        android:layout_height="69dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnoscuro2"
        android:onClick="volver"
        android:text="@string/borrar"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listadoProtectora"
        app:layout_constraintVertical_bias="0.345"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>