<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificaFormulario"
    android:background="@drawable/fondo2">

    <Button
        android:id="@+id/BtnModProtec"
        style="@style/etiquetas"
        android:layout_width="166dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnoscuro2"
        android:onClick="Crear"
        android:text="@string/modificar_voluntariio"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/BtnMod"
        app:layout_constraintTop_toTopOf="@+id/BtnMod"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,OnClick" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/latProtectoraModificar"
        style="@style/etiquetas2"
        android:textAlignment="center"
        android:layout_width="178dp"
        android:layout_height="97dp"
        android:hint="@string/coordenada_y"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/longProtectoraModifcar"
        app:layout_constraintTop_toBottomOf="@+id/usu4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/longProtectoraModifcar"
        style="@style/etiquetas2"
        android:textAlignment="center"
        android:layout_width="178dp"
        android:layout_height="97dp"
        android:hint="@string/coordenada_x"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usu4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usu4"
        style="@style/etiquetas2"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/coordenadas"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailProtectoraModificar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mailProtectoraModificar"
        style="@style/etiquetas2"
        android:layout_width="341dp"
        android:layout_height="57dp"
        android:hint="@string/escribe_aqui"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usu3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usu3"
        style="@style/etiquetas2"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonoProtectoraModificar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/beta"
        style="@style/etiquetas2"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:text="@string/beta_v_1_02_0"
        android:textAlignment="textEnd"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombreProtectoraModificar"
        style="@style/etiquetas2"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:hint="@string/hint"
        android:text="@string/doble_clic"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usu"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usu"
        style="@style/etiquetas2"
        android:layout_width="224dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/nombre2"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usu2"
        style="@style/etiquetas2"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/telefono2"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreProtectoraModificar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/telefonoProtectoraModificar"
        style="@style/etiquetas2"
        android:layout_width="361dp"
        android:layout_height="54dp"
        android:hint="@string/escribe_aqui"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usu2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/BtnMod"
        style="@style/etiquetas"
        android:layout_width="166dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnoscuro2"
        android:onClick="Generar"
        android:text="@string/generar_coordenadas"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailProtectoraModificar"
        app:layout_constraintVertical_bias="0.58"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/BtnAtras"
        style="@style/etiquetas"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btnoscuro2"
        android:onClick="volver"
        android:text="@string/atras"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnMod"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>